VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc4Down.err
[8MB/454.9MB][  1%][>                                                 ][2.667MB/s]  [16MB/454.9MB][  3%][=>                                                ][4MB/s]  [24MB/454.9MB][  5%][==>                                               ][4.8MB/s]  [32MB/454.9MB][  7%][===>                                              ][5.333MB/s]  [40MB/454.9MB][  8%][====>                                             ][5.714MB/s]  [48MB/454.9MB][ 10%][=====>                                            ][6MB/s]  [56MB/454.9MB][ 12%][======>                                           ][6.222MB/s]  [64MB/454.9MB][ 14%][=======>                                          ][6.4MB/s]  [72MB/454.9MB][ 15%][=======>                                          ][6.545MB/s]  [80MB/454.9MB][ 17%][========>                                         ][6.667MB/s]  [88MB/454.9MB][ 19%][=========>                                        ][6.769MB/s]  [96MB/454.9MB][ 21%][==========>                                       ][6.857MB/s]  [104MB/454.9MB][ 22%][===========>                                      ][6.933MB/s]  [112MB/454.9MB][ 24%][============>                                     ][7MB/s]  [120MB/454.9MB][ 26%][=============>                                    ][7.059MB/s]  [128MB/454.9MB][ 28%][==============>                                   ][7.111MB/s]  [136MB/454.9MB][ 29%][==============>                                   ][7.158MB/s]  [144MB/454.9MB][ 31%][===============>                                  ][7.2MB/s]  [152MB/454.9MB][ 33%][================>                                 ][7.238MB/s]  [160MB/454.9MB][ 35%][=================>                                ][7.273MB/s]  [168MB/454.9MB][ 36%][==================>                               ][7.304MB/s]  [176MB/454.9MB][ 38%][===================>                              ][7.333MB/s]  [184MB/454.9MB][ 40%][====================>                             ][7.36MB/s]  [192MB/454.9MB][ 42%][=====================>                            ][7.385MB/s]  [200MB/454.9MB][ 43%][=====================>                            ][7.407MB/s]  [208MB/454.9MB][ 45%][======================>                           ][7.429MB/s]  [216MB/454.9MB][ 47%][=======================>                          ][7.448MB/s]  [224MB/454.9MB][ 49%][========================>                         ][7.467MB/s]  [232MB/454.9MB][ 51%][=========================>                        ][7.484MB/s]  [240MB/454.9MB][ 52%][==========================>                       ][7.5MB/s]  [248MB/454.9MB][ 54%][===========================>                      ][7.515MB/s]  [256MB/454.9MB][ 56%][============================>                     ][7.314MB/s]  [264MB/454.9MB][ 58%][=============================>                    ][7.135MB/s]  [272MB/454.9MB][ 59%][=============================>                    ][6.8MB/s]  [280MB/454.9MB][ 61%][==============================>                   ][6.364MB/s]  [288MB/454.9MB][ 63%][===============================>                  ][6MB/s]  [296MB/454.9MB][ 65%][================================>                 ][5.804MB/s]  [304MB/454.9MB][ 66%][=================================>                ][5.63MB/s]  [312MB/454.9MB][ 68%][==================================>               ][5.474MB/s]  [320MB/454.9MB][ 70%][===================================>              ][5.333MB/s]  [328MB/454.9MB][ 72%][====================================>             ][4.97MB/s]  [336MB/454.9MB][ 73%][====================================>             ][4.667MB/s]  [344MB/454.9MB][ 75%][=====================================>            ][4.354MB/s]  [352MB/454.9MB][ 77%][======================================>           ][4.093MB/s]  [360MB/454.9MB][ 79%][=======================================>          ][3.75MB/s]  [368MB/454.9MB][ 80%][========================================>         ][3.608MB/s]  [376MB/454.9MB][ 82%][=========================================>        ][3.481MB/s]  [384MB/454.9MB][ 84%][==========================================>       ][3.368MB/s]  [392MB/454.9MB][ 86%][===========================================>      ][3.213MB/s]  [400MB/454.9MB][ 87%][===========================================>      ][3.15MB/s]  [408MB/454.9MB][ 89%][============================================>     ][3.115MB/s]  [416MB/454.9MB][ 91%][=============================================>    ][3.036MB/s]  [424MB/454.9MB][ 93%][==============================================>   ][2.965MB/s]  [432MB/454.9MB][ 94%][===============================================>  ][2.88MB/s]  [440MB/454.9MB][ 96%][================================================> ][2.857MB/s]  [448MB/454.9MB][ 98%][=================================================>][2.835MB/s]  [454.9MB/454.9MB][100%][==================================================][2.825MB/s]  [454.9MB/454.9MB][100%][==================================================][2.825MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_64341/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_64341/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
